--- a/roles/spotify/tasks/main.yml
+++ b/roles/spotify/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Import GPG key
-  command: "curl -sS https://download.spotify.com/debian/pubkey_0D811D58.gpg | gpg --import -"
+  shell: "curl -sS https://download.spotify.com/debian/pubkey_0D811D58.gpg | gpg --import -"
 
 - name: Install spotify from AUR
   aur:
