--- a/host_vars/laptop/xorg.yml
+++ b/host_vars/laptop/xorg.yml
@@ -19,25 +19,5 @@ xorg_conf_d:
         Option "NaturalScrolling" "true"
         Option "Tapping" "on"
         Option "TappingButtonMap" "lrm"
-    EndSection
-  "10-nvidia-drm-outputclass.conf.opt": |
-    Section "OutputClass"
-        Identifier "intel"
-        MatchDriver "i915"
-        Driver "modesetting"
-    EndSection
-
-    Section "Screen"
-      Identifier "iGPU"
-      Device "iGPU"
-    EndSection
-
-    Section "OutputClass"
-        Identifier "nvidia"
-        MatchDriver "nvidia-drm"
-        Driver "nvidia"
-        Option "AllowEmptyInitialConfiguration"
-        Option "PrimaryGPU" "yes"
-        ModulePath "/usr/lib/nvidia/xorg"
-        ModulePath "/usr/lib/xorg/modules"
+        Option "Accel Speed" 0.4
     EndSection
