--- a/roles/chezmoi/defaults/main.yml
+++ b/roles/chezmoi/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 
+chezmoi_version: "2.4.0"
 chezmoi_user: "{{ my_user | default('andrei') }}"
 chezmoi_user_override: "/home/{{ chezmoi_user }}/.config/override"
 
