--- a/roles/chezmoi/tasks/main.yml
+++ b/roles/chezmoi/tasks/main.yml
@@ -1,10 +1,19 @@
 ---
 
+- name: Install chezmoi (deb)
+  become: true
+  apt:
+    deb: "https://github.com/twpayne/chezmoi/releases/download/v{{ chezmoi_version }}/chezmoi_{{ chezmoi_version }}_linux_amd64.deb"
+    state: present
+  when: ansible_os_family == 'Debian'
+  tags: "install"
+
 - name: Install chezmoi
   become: true
   package:
     name: chezmoi
     state: present
+  when: ansible_os_family != 'Debian'
   tags: "install"
 
 - name: Copy overrides
