--- a/host_vars/desktop/chezmoi.yml
+++ b/host_vars/desktop/chezmoi.yml
@@ -5,22 +5,15 @@
 
 chezmoi_overrides:
   i3: |
-    _day=$(date +%a)
-    _hour=$(date +%H)
-    if [[ $_day = "Tue" || $_day = "Thu" ]] && [[ $_hour -ge 8 && $_hour -le 16 ]]; then
-        WS["1"]="work"
-        WS["2"]="work"
-    else
-        WS["2"]="no-discord"
-    fi
+    WS["2"]="no-discord"
   xorg: |
     DPI=144
-    MONITOR_MAP["DP-4"]="--primary --mode 3840x2160 --rate 120"
-    MONITOR_MAP["DP-0"]="--above DP-4"
+    MONITOR_MAP["DP-2"]="--primary --mode 3840x2160 --rate 120"
+    MONITOR_MAP["DP-0"]="--above DP-2"
     MONITOR_MAP["HDMI-0"]="--off"
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="1"
     MOUSE_SENS="-0.65"
     MOUSE_NAME="pointer:Logitech G502"
-    NVIDIA_CORE_OFFSET="50"
-    NVIDIA_MEM_OFFSET="1100"
+    #NVIDIA_CORE_OFFSET="50"
+    #NVIDIA_MEM_OFFSET="1100"
