--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -42,6 +42,20 @@
       when: ansible_distribution == 'Archlinux'
       tags: ["reflector"]
 
+    - role: locale_conf
+      when: ansible_os_family != 'RedHat'
+      tags: ["locale"]
+
+    - role: sudo
+      tags: ["sudo"]
+
+    - role: hostname
+      tags: ["hostname"]
+
+    - role: systemd_networkd
+      when: network_manager == "systemd-networkd"
+      tags: ["systemd-networkd"]
+
     - role: chezmoi
       tags: ["chezmoi"]
 
