Update laptop host vars

--- a/host_vars/laptop/network.yml
+++ b/host_vars/laptop/network.yml
@@ -5,6 +5,9 @@ networkd_config:
       [Match]
       Name=en*
 
+      [Link]
+      RequiredForOnline=no
+
       [Network]
       DHCP=yes
       IPForward=yes
