--- a/host_vars/ovh-gw01/ufw.yml
+++ b/host_vars/ovh-gw01/ufw.yml
@@ -4,6 +4,10 @@ ufw_allow_dhcpv6: false
 ufw_custom_rules:
   - port: 22
     proto: tcp
+  - port: 53
+    proto: tcp
+  - port: 53
+    proto: udp
   - port: 80
     proto: tcp
   - port: 443
