Install netclient where needed

--- a/playbooks/desktop.yml
+++ b/playbooks/desktop.yml
@@ -82,5 +82,8 @@
     - role: ddcutil
       tags: ["ddcutil"]
 
+    - role: netclient
+      tags: ["netclient"]
+
     # - role: nvidia_exporter
     #   tags: ["prometheus-stack", "nvidia_exporter"]
