--- a/host_vars/laptop/network.yml
+++ b/host_vars/laptop/network.yml
@@ -18,6 +18,9 @@ networkd_config:
       [Match]
       Type=wlan
 
+      [Link]
+      RequiredForOnline=no
+
       [Network]
       DHCP=yes
       IPForward=yes
