Actually install systemd sleep config

--- a/roles/laptop/defaults/main.yml
+++ b/roles/laptop/defaults/main.yml
@@ -26,3 +26,5 @@ logind_config: |
   HandleLidSwitchExternalPower=suspend
   HandleLidSwitchDocked=ignore
   HandleRebootKey=ignore
+
+systemd_sleep_config: ""
