--- a/host_vars/laptop/power.yml
+++ b/host_vars/laptop/power.yml
@@ -24,5 +24,5 @@ logind_config: |
   HandleLidSwitchDocked=ignore
   HandleRebootKey=ignore
 
-systemd_sleep: |
-  HibernateDelaySec=3h
+systemd_sleep_config: |
+  HibernateDelaySec=48h
