--- a/host_vars/laptop/chezmoi.yml
+++ b/host_vars/laptop/chezmoi.yml
@@ -34,16 +34,22 @@ chezmoi_overrides:
     MONITOR_MAP["DP-3-2"]="laptop-ext"
     MONITOR_MAP["HDMI-1"]="laptop-ext-secondary"
     DPI_MAP["eDP-1"]="192"
-  xinitrc: |
+  sway: |
+    export MOZ_ENABLE_WAYLAND=1
+    export MOZ_USE_XINPUT2=1
+  swayidle: |
+    SCREEN_ON=1
+  gui: |
     QT_AUTO_SCREEN_SCALE_FACTOR="1"
     QT_QPA_PLATFORMTHEME="qt5ct"
+  xinitrc: |
     MOZ_X11_EGL="1"
     xinput set-prop 'SynPS/2 Synaptics TouchPad' 'libinput Accel Speed' 0.4
     xinput set-prop 'TPPS/2 Elan TrackPoint' 'libinput Accel Speed' -0.5
   lock: |
     idle_hook="xidlehook_lock_screen_on"
-    LOCKER="sxlock"
-    OPTS="-i ~/.wallpaper -t"
+    LOCKER="i3lock"
+    OPTS="-i $HOME/.wallpaper -t --clock"
   xorg: |
     DPI=192
   xorg_2: |
