Add VMware inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,6 @@ inventory = hosts
 filter_plugins = filter_plugins
 vault_password_file = .secrets/vault_key
 library = ./library
+
+[inventory]
+enable_plugins = vmware_vm_inventory,ini
