Add psql backup to pg group

--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -111,6 +111,9 @@
     - role: geerlingguy.postgresql
       tags: ["pg"]
 
+    - role: systemd
+      tags: ["systemd"]
+
   post_tasks:
     - name: Install RPM requirements
       dnf:
