Move PostgreSQL server to pg01

--- a/group_vars/pg/vars.yml
+++ b/group_vars/pg/vars.yml
@@ -20,3 +20,5 @@ postgresql_global_config_options:
     value: 'on'
   - option: ssl_ca_file
     value: 'root.crt'
+
+postgres_exporter_port: "9187"
