--- a/host_vars/dresrv/prometheus.yml
+++ b/host_vars/dresrv/prometheus.yml
@@ -113,7 +113,7 @@ prometheus_scrape_configs:
   - job_name: 'postgres'
     scrape_interval: 60s
     static_configs:
-      - targets: ['localhost:{{ postgres_exporter_port }}']
+      - targets: ["{{ hostvars['pg01'].ansible_host }}:{{ hostvars['pg01'].postgres_exporter_port }}"]
         labels:
           instance: "{{ server_label }}"
 
