Add pg terraform user and db

--- a/group_vars/pg/users.yml
+++ b/group_vars/pg/users.yml
@@ -21,3 +21,6 @@ postgresql_users:
   - name: uuid_gen
 
   - name: web
+
+  - name: terraform
+    password: "{{ vault_postgresql_passwords.terraform }}"
